--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "expo": "^39.0.4",
     "expo-status-bar": "~1.0.2",
+    "i18next": "^19.8.4",
     "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-i18next": "^11.7.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-localize": "^2.0.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
