--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "16.13.1",
     "react-i18next": "^11.7.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-animated-splash-screen": "^2.0.5",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-localize": "^2.0.1",
