Add miragejs as dependency and update swr

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-status-bar": "~1.0.2",
     "i18next": "^19.8.4",
     "lodash": "^4.17.20",
+    "miragejs": "^0.1.41",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-i18next": "^11.7.3",
@@ -32,7 +33,7 @@
     "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.1",
-    "swr": "^0.3.9"
+    "swr": "^0.3.11"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
