--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
-    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "expo": "^39.0.4",
     "expo-status-bar": "~1.0.2",
     "i18next": "^19.8.4",
     "lodash": "^4.17.20",
-    "miragejs": "^0.1.41",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-i18next": "^11.7.3",
+    "react-i18next": "^11.8.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-elements": "^3.0.0-alpha.1",
@@ -36,7 +35,8 @@
     "swr": "^0.3.11"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "miragejs": "^0.1.41"
   },
   "private": true
 }
