Revert "Remove useless dep and add good one"
This reverts commit 1bbe27b8460a9ef41c473d0ab1a7c8c81b948817.

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "feed-tech",
-    "slug": "feed-tech",
+    "name": "green-app",
+    "slug": "green-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -13,7 +13,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
