--- a/package.json
+++ b/package.json
@@ -11,27 +11,34 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
-    "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.8.10",
     "babel-plugin-module-resolver": "^4.1.0",
     "expo": "^39.0.4",
     "expo-status-bar": "~1.0.2",
-    "himalaya": "^1.1.0",
+    "i18next": "^19.8.4",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-i18next": "^11.8.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-elements": "^3.0.0-alpha.1",
-    "react-native-gesture-handler": "^1.9.0",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-localize": "^2.0.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.2",
-    "react-native-rss-parser": "^1.5.1",
     "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "^2.16.1",
-    "styled-components": "^5.2.1"
+    "react-native-screens": "~2.10.1",
+    "react-native-svg": "12.1.0",
+    "react-native-svg-charts": "^5.4.0",
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.2.1",
+    "swr": "^0.3.11"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "miragejs": "^0.1.41"
   },
   "private": true
 }
